--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -92,9 +92,10 @@
   }
   
   #events-container .card {
+    flex: 1 1 24%;
     border-radius: 10px;
     padding: 0;
-    margin: 5px;
+    margin: .5%;
   }
   
   #events-container img {
