--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -191,7 +191,14 @@
     margin: 20px 0;
   }
   
+  #items-list{
+    list-style: none;
+    padding-left: 0;
+  }
   
+  #items-list li{
+    display: flex;
+  }
 
   
   /* footer */
